base/go-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-sample
  namespace: demo
  labels:
    app: go-sample
spec:
  type: NodePort
  selector:
    app: go-sample
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
