base/go-sample/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "go-sample-ingress"   
  labels:
    app: "go-sample-ingress"  
  namespace: demo
spec:
  rules:
    - host: "*.com"
      http:
        paths:
          - path: /go-sample
            backend:
              serviceName: go-sample
              servicePort: 80
